[gd_scene load_steps=11 format=3 uid="uid://b8xnmt28vqj7i"]

[ext_resource type="PackedScene" uid="uid://1hq6qpr1oa3i" path="res://Scenes/AdvButton.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://c8jr3e5aiyj1n" path="res://Scenes/HelpText.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://ddf2xjwcht77u" path="res://Scenes/CloseButton.tscn" id="5"]
[ext_resource type="Theme" uid="uid://cp2u1kgj60ic" path="res://Resources/default_theme.tres" id="6"]
[ext_resource type="Script" path="res://Scripts/GigastructuresPanel.gd" id="7"]

[sub_resource type="Theme" id="1"]
Button/colors/font_color = Color(0.88, 0.88, 0.88, 1)
Button/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
Button/colors/font_color_hover = Color(0.94, 0.94, 0.94, 1)
Button/colors/font_color_pressed = Color(1, 1, 1, 1)
Button/constants/h_separation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="Shortcut" id="3"]

[sub_resource type="Animation" id="4"]
resource_name = "Fade"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5a0wr"]
_data = {
"Fade": SubResource("4"),
"RESET": SubResource("5")
}

[node name="TerraformPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -296.0
offset_right = 512.0
offset_bottom = 296.0
pivot_offset = Vector2(533, 300)
theme = ExtResource("6")
script = ExtResource("7")

[node name="Title" type="Label" parent="."]
custom_minimum_size = Vector2(0, 38)
layout_mode = 0
anchor_right = 1.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 18
text = "GS_SC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" parent="." instance=ExtResource("5")]
layout_mode = 1
offset_left = -32.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 32.0

[node name="Desc" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_left = 24.0
offset_top = 56.0
offset_right = -24.0
offset_bottom = 96.0
text = "GS_DESC"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -168.0
offset_right = 400.0
offset_bottom = 272.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("1")

[node name="MineralExtraction" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
button_text = "MINERAL_EXTRACTION"

[node name="EnergyProduction" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
button_text = "ENERGY_PRODUCTION"

[node name="MineralStorage" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
button_text = "MINERAL_STORAGE"

[node name="EnergyStorage" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
button_text = "ENERGY_STORAGE"

[node name="Research" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
button_text = "RESEARCH"

[node name="GalaxyKiller" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
button_text = "GALAXY_KILLER"

[node name="TriangulumProbe" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
button_text = "TRIANGULUM_PROBE"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 136.0
offset_right = 1000.0
offset_bottom = 568.0

[node name="Control" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -160.0
offset_right = -24.0
offset_bottom = 272.0
mouse_filter = 1

[node name="VBox" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 520.0
offset_bottom = 424.0

[node name="GalaxyInfo" type="Label" parent="Control/VBox"]
layout_mode = 2
autowrap_mode = 3

[node name="Costs" type="Label" parent="Control/VBox"]
layout_mode = 2
text = "COSTS"

[node name="CostsHBox" type="GridContainer" parent="Control/VBox"]
layout_mode = 2
columns = 3

[node name="ProductionPerSec" type="Label" parent="Control/VBox"]
layout_mode = 2
text = "PRODUCTION_PER_SECOND"

[node name="StoneMM" type="ScrollContainer" parent="Control/VBox"]
visible = false
custom_minimum_size = Vector2(0, 170)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Control/VBox/StoneMM"]
layout_mode = 2
columns = 4

[node name="Production" type="VBoxContainer" parent="Control/VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ProdCostMult" parent="Control" instance=ExtResource("2")]
layout_mode = 0
offset_left = 24.0
offset_top = 384.0
offset_right = 376.0
offset_bottom = 414.0
help_text = "PCM_DESC"

[node name="ProdMult" parent="Control" instance=ExtResource("2")]
layout_mode = 0
offset_left = 24.0
offset_top = 340.0
offset_right = 292.0
offset_bottom = 370.0
help_text = "GS_PROD_MULT_BY_X"

[node name="Convert" type="Button" parent="Control"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -50.0
offset_right = -16.0
offset_bottom = -16.0
shortcut = SubResource("3")
shortcut_in_tooltip = false
text = "CONVERT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_5a0wr")
}

[connection signal="close_button_pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MineralExtraction" to="." method="_on_GS_pressed" binds= ["ME"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/EnergyProduction" to="." method="_on_GS_pressed" binds= ["PP"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/MineralStorage" to="." method="_on_GS_pressed" binds= ["MS"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/EnergyStorage" to="." method="_on_GS_pressed" binds= ["B"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Research" to="." method="_on_GS_pressed" binds= ["RL"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GalaxyKiller" to="." method="_on_GS_pressed" binds= ["GK"]]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/TriangulumProbe" to="." method="_on_GS_pressed" binds= ["TP"]]
[connection signal="pressed" from="Control/Convert" to="." method="_on_Convert_pressed"]
[connection signal="animation_finished" from="Control/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
